force-app/main/default/objects/Contact/fields/Clone_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Clone_Account_Name__c</fullName>
    <formula>Parent_Contact__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Clone Account Name</label>
    <type>Text</type>
</CustomField>