force-app/main/default/objects/Contact/fields/Condidate__c.field-meta.xml
<CustomField>
    <fullName>Condidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Condidate</label>
    <referenceTo>Condidate__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>