force-app/main/default/objects/Contact/fields/Do_Not_Contact__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Contact__c</fullName>
    <formula>AND(DoNotCall, HasOptedOutOfEmail, HasOptedOutOfFax)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Do Not Contact</label>
    <type>Checkbox</type>
</CustomField>