force-app/main/default/objects/Contact/fields/Experia__c.field-meta.xml
<CustomField>
    <fullName>Experia__c</fullName>
    <label>Experience</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>