force-app/main/default/objects/Contact/fields/Mark_as_Student__c.field-meta.xml
<CustomField>
    <fullName>Mark_as_Student__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mark as Student</label>
    <type>Checkbox</type>
</CustomField>