force-app/main/default/objects/Contact/fields/Marrieds__c.field-meta.xml
<CustomField>
    <fullName>Marrieds__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick if person is married.</inlineHelpText>
    <label>Married</label>
    <type>Checkbox</type>
</CustomField>