force-app/main/default/objects/Contact/listViews/new.listView-meta.xml
<ListView>
    <fullName>new</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Experia__c</columns>
    <filterScope>Mine</filterScope>
    <label>new</label>
</ListView>